--- a/index.html
+++ b/index.html
@@ -15,36 +15,38 @@
             <div class="ksmm-list-container" id="ksmm-list-container">
                 <div class="ksmm-title-wrapper">
                     <h2 class="ksmm-map-title" id="ksmm-map-title"></h2>
-                    <button class="ksmm-toggle-panel" id="ksmm-toggle-panel" aria-label="Скрыть/показать панель">
-                        <span class="ksmm-toggle-icon">‹</span>
-                    </button>
+                    <select id="ksmm-floor-select" class="ksmm-floor-select" aria-label="Выбор этажа">
+                    </select>
                 </div>
                 <div class="ksmm-search-bar">
-                    <input type="search" id="ksmm-search-input" placeholder="Поиск по названию или описанию...">
+                    <input type="search" id="ksmm-search-input" placeholder="Поиск по названию или описанию..." aria-label="Поиск сервисов">
                 </div>
-                <div class="ksmm-filter-controls">
-                    <button class="ksmm-filter-btn active" data-category="all">Все</button>
-                    <button class="ksmm-filter-btn" data-category="meeting">Переговорки</button>
-                    <button class="ksmm-filter-btn" data-category="food">Питание</button>
-                    <button class="ksmm-filter-btn" data-category="sport">Спорт</button>
-                    <button class="ksmm-filter-btn" data-category="relax">Релакс</button>
-                    <button class="ksmm-filter-btn" data-category="service">Сервисы</button>
+                <div class="ksmm-filter-controls" role="tablist" aria-label="Фильтры категорий">
+                    <button class="ksmm-filter-btn active" data-category="all" role="tab" aria-selected="true" tabindex="0">Все</button>
+                    <button class="ksmm-filter-btn" data-category="food" role="tab" aria-selected="false" tabindex="0">Питание</button>
+                    <button class="ksmm-filter-btn" data-category="sport" role="tab" aria-selected="false" tabindex="0">Спорт</button>
+                    <button class="ksmm-filter-btn" data-category="meeting" role="tab" aria-selected="false" tabindex="0">Переговорки</button>
+                    <button class="ksmm-filter-btn" data-category="relax" role="tab" aria-selected="false" tabindex="0">Релакс</button>
+                    <button class="ksmm-filter-btn" data-category="service" role="tab" aria-selected="false" tabindex="0">Сервисы</button>
                 </div>
                 <div id="ksmm-subfilter-controls" class="ksmm-subfilter-controls">
                 </div>
-                <div id="ksmm-services-list" class="ksmm-scroll-list">
+                <div id="ksmm-services-list" class="ksmm-scroll-list" role="list">
                 </div>
             </div>
             <div class="ksmm-map-container">
-                <div id="ksmm-floor-switcher" class="ksmm-floor-switcher"></div>
-                <svg id="ksmm-map" viewBox="0 0 800 550" preserveAspectRatio="xMidYMid meet">
+                <div id="ksmm-loading-indicator" class="ksmm-loading-indicator" style="display: none;">
+                    <div class="ksmm-spinner"></div>
+                    <p>Загрузка карты этажа...</p>
+                </div>
+                <svg id="ksmm-map" viewBox="0 0 800 600" preserveAspectRatio="xMidYMid meet">
                     <g id="ksmm-map-wrapper">
-                        <g id="ksmm-map-base" class="ksmm-map-base"></g>
+                        <rect x="0" y="0" width="800" height="600" fill="#fcfcfc" stroke="#ccc" stroke-width="2" />
                         <g id="ksmm-map-areas"></g>
                     </g>
                 </svg>
-                <div id="ksmm-popup" class="ksmm-popup" style="display: none;">
-                    <button id="ksmm-popup-close" class="ksmm-popup-close">&times;</button>
+                <div id="ksmm-popup" class="ksmm-popup" style="display: none;" role="dialog" aria-labelledby="ksmm-popup-title" aria-modal="true">
+                    <button id="ksmm-popup-close" class="ksmm-popup-close" aria-label="Закрыть">&times;</button>
                     <img id="ksmm-popup-img" alt="Фото сервиса" class="ksmm-popup-img">
                     <h3 id="ksmm-popup-title"></h3>
                     <p id="ksmm-popup-desc"></p>
