--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
                 <svg id="ksmm-map" viewBox="0 0 800 600" preserveAspectRatio="xMidYMid meet">
                     <g id="ksmm-map-wrapper">
                         <rect x="0" y="0" width="800" height="600" fill="#fcfcfc" stroke="#ccc" stroke-width="2" />
+                        <g id="ksmm-map-base"></g>
                         <g id="ksmm-map-areas"></g>
                     </g>
                 </svg>
