Добавлен дропдаун для выбора этажа, улучшена логика переключения этажей и обновлены стили. Обновлены данные этажей и добавлены новые сервисы для здания B3.

--- a/index.html
+++ b/index.html
@@ -14,7 +14,14 @@
         <div class="ksmm-content">
             <div class="ksmm-list-container" id="ksmm-list-container">
                 <div class="ksmm-title-wrapper">
-                    <h2 class="ksmm-map-title" id="ksmm-map-title"></h2>
+                    <div class="ksmm-floor-dropdown" id="ksmm-floor-dropdown">
+                        <button class="ksmm-floor-dropdown-btn" id="ksmm-floor-dropdown-btn" aria-label="Выбрать этаж">
+                            <span id="ksmm-floor-dropdown-text">Корпус 1, 3 этаж</span>
+                            <span class="ksmm-floor-dropdown-arrow">▼</span>
+                        </button>
+                        <div class="ksmm-floor-dropdown-list" id="ksmm-floor-dropdown-list" style="display: none;">
+                        </div>
+                    </div>
                     <button class="ksmm-toggle-panel" id="ksmm-toggle-panel" aria-label="Скрыть/показать панель">
                         <span class="ksmm-toggle-icon">‹</span>
                     </button>
