--- a/index.html
+++ b/index.html
@@ -14,10 +14,14 @@
         <div class="ksmm-content">
             <div class="ksmm-list-container" id="ksmm-list-container">
                 <div class="ksmm-title-wrapper">
-                    <h2 class="ksmm-map-title" id="ksmm-map-title"></h2>
-                    <button class="ksmm-toggle-panel" id="ksmm-toggle-panel" aria-label="Скрыть/показать панель">
-                        <span class="ksmm-toggle-icon">‹</span>
-                    </button>
+                    <div class="ksmm-floor-dropdown" id="ksmm-floor-dropdown">
+                        <button class="ksmm-floor-dropdown-btn" id="ksmm-floor-dropdown-btn" aria-label="Выбрать этаж">
+                            <span id="ksmm-floor-dropdown-text">Корпус 1, 3 этаж</span>
+                            <span class="ksmm-floor-dropdown-arrow">▼</span>
+                        </button>
+                        <div class="ksmm-floor-dropdown-list" id="ksmm-floor-dropdown-list" style="display: none;">
+                        </div>
+                    </div>
                 </div>
                 <div class="ksmm-search-bar">
                     <input type="search" id="ksmm-search-input" placeholder="Поиск по названию или описанию...">
@@ -25,9 +29,9 @@
                 <div class="ksmm-filter-controls">
                     <button class="ksmm-filter-btn active" data-category="all">Все</button>
                     <button class="ksmm-filter-btn" data-category="meeting">Переговорки</button>
-                    <button class="ksmm-filter-btn" data-category="food">Питание</button>
+                    <button class="ksmm-filter-btn" data-category="food">Еда</button>
                     <button class="ksmm-filter-btn" data-category="sport">Спорт</button>
-                    <button class="ksmm-filter-btn" data-category="relax">Релакс</button>
+                    <button class="ksmm-filter-btn" data-category="relax">Отдых</button>
                     <button class="ksmm-filter-btn" data-category="service">Сервисы</button>
                 </div>
                 <div id="ksmm-subfilter-controls" class="ksmm-subfilter-controls">
@@ -37,6 +41,24 @@
             </div>
             <div class="ksmm-map-container">
                 <div id="ksmm-floor-switcher" class="ksmm-floor-switcher"></div>
+                <!-- Переключатели этажей (вертикальные, сверху/снизу) -->
+                <button id="ksmm-floor-prev" class="ksmm-floor-nav-btn ksmm-floor-nav-btn-prev" style="display: none;" aria-label="Предыдущий этаж">
+                    <span class="ksmm-nav-icon">▲</span>
+                    <span class="ksmm-nav-label"></span>
+                </button>
+                <button id="ksmm-floor-next" class="ksmm-floor-nav-btn ksmm-floor-nav-btn-next" style="display: none;" aria-label="Следующий этаж">
+                    <span class="ksmm-nav-icon">▼</span>
+                    <span class="ksmm-nav-label"></span>
+                </button>
+                <!-- Переключатели корпусов (горизонтальные, слева/справа) -->
+                <button id="ksmm-building-prev" class="ksmm-building-nav-btn ksmm-building-nav-btn-prev" style="display: none;" aria-label="Предыдущий корпус">
+                    <span class="ksmm-nav-icon">◀</span>
+                    <span class="ksmm-nav-label"></span>
+                </button>
+                <button id="ksmm-building-next" class="ksmm-building-nav-btn ksmm-building-nav-btn-next" style="display: none;" aria-label="Следующий корпус">
+                    <span class="ksmm-nav-icon">▶</span>
+                    <span class="ksmm-nav-label"></span>
+                </button>
                 <svg id="ksmm-map" viewBox="0 0 800 550" preserveAspectRatio="xMidYMid meet">
                     <g id="ksmm-map-wrapper">
                         <g id="ksmm-map-base" class="ksmm-map-base"></g>
