--- a/index.html
+++ b/index.html
@@ -28,11 +28,14 @@
                 </div>
                 <div class="ksmm-filter-controls">
                     <button class="ksmm-filter-btn active" data-category="all">Все</button>
-                    <button class="ksmm-filter-btn" data-category="meeting">Переговорки</button>
-                    <button class="ksmm-filter-btn" data-category="food">Еда</button>
+                    <button class="ksmm-filter-btn" data-category="meeting">Переговорные</button>
+                    <button class="ksmm-filter-btn" data-category="food">Питание</button>
+                    <button class="ksmm-filter-btn" data-category="service">Сервис</button>
+                    <button class="ksmm-filter-btn" data-category="eco">Эко-инициативы</button>
+                    <button class="ksmm-filter-btn" data-category="relax">Релакс</button>
                     <button class="ksmm-filter-btn" data-category="sport">Спорт</button>
-                    <button class="ksmm-filter-btn" data-category="relax">Отдых</button>
-                    <button class="ksmm-filter-btn" data-category="service">Сервисы</button>
+                    <button class="ksmm-filter-btn" data-category="health">Здоровье</button>
+                    <button class="ksmm-filter-btn" data-category="beauty">Красота</button>
                 </div>
                 <div id="ksmm-subfilter-controls" class="ksmm-subfilter-controls">
                 </div>
