fix: исправление z-index кнопки закрытия попапа и автоматическое преобразование URL в ссылки

--- a/tilda-full-embed.html
+++ b/tilda-full-embed.html
@@ -82,7 +82,7 @@
                 <div class="ksmm-popup-body">
                     <p id="ksmm-popup-desc"></p>
                     <p id="ksmm-popup-contacts"></p>
-                    <a id="ksmm-popup-link" href="#" target="_blank" class="ksmm-popup-link">Подробнее</a>
+                    <a id="ksmm-popup-link" href="#" target="_blank" class="ksmm-btn">Подробнее</a>
                 </div>
             </div>
         </div>
@@ -99,4 +99,5 @@
 </script>
 <script src="https://YOUR_USERNAME.github.io/REPO_NAME/data.js"></script>
 <script src="https://YOUR_USERNAME.github.io/REPO_NAME/app.js"></script>
+
 
