--- a/tilda-ready.html
+++ b/tilda-ready.html
@@ -76,7 +76,7 @@
                 <div class="ksmm-popup-body">
                     <p id="ksmm-popup-desc"></p>
                     <p id="ksmm-popup-contacts"></p>
-                    <a id="ksmm-popup-link" href="#" target="_blank" class="ksmm-popup-link">Подробнее</a>
+                    <a id="ksmm-popup-link" href="#" target="_blank" class="ksmm-btn">Подробнее</a>
                 </div>
             </div>
         </div>
@@ -93,4 +93,5 @@
 </script>
 <script src="https://artur-ershov.github.io/services-map/data.js"></script>
 <script src="https://artur-ershov.github.io/services-map/app.js"></script>
+
 
